# LitePhoton

./: .gitignore  Cargo.toml  README.md  flamegraph.sh
example/: Cargo.toml
example/src/: main.rs
src/: argument_parser.rs  common.rs  environment.rs  input.rs  lib.rs  logger.rs  main.rs  matching.rs  scan.rs
src/input/: get_input.rs  mod.rs  print_input.rs
src/read_util/: common.rs  mod.rs
src/scan/: mod.rs  none_scanner.rs  rayon_scanner.rs  stdthread_scanner.rs
src/utils/: mod.rs  stdout_util.rs  string_util.rs  write_util.rs
