[package]
name = "LitePhoton"
version = "2.0.2"
edition = "2024"
description = "A blazingly fast text file/csv file/etc scanner."
homepage = "https://izom.net"
repository = "https://github.com/IzomSoftware/LitePhoton"
readme = "README.md"
license = "MIT"
publish = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
log = "0.4.32"
env_logger = "0.11.10"
rayon = "1.10.0"
strum = "0.28.0"
strum_macros = "0.28.0"
memmap2 = "0.9.9"
memchr = "2.8.1"
thiserror = "2.0.18"
regex = "1.12.3"

[profile.release]
strip = false ## false this only when flamegraph needed / or profiling
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
debug = true ## true this only when flamegraph needed / or profiling
split-debuginfo = "off" ## Comment if no flamegraph needed